<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

   <groupId>com.github.heyoulin.Sentinel</groupId>
    <artifactId>sentinel-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>${project.artifactId}</name>
    <description>The parent project of Sentinel</description>
    <url>https://github.com/alibaba/Sentinel</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/alibaba/Sentinel</url>
        <connection>scm:git:https://github.com/alibaba/Sentinel.git</connection>
        <developerConnection>scm:git:https://github.com/alibaba/Sentinel.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>The Sentinel Project Contributors</name>
            <email>sentinel-dev@linux.alibaba.com</email>
            <url>https://github.com/alibaba/Sentinel</url>
        </developer>
    </developers>
    <organization>
        <name>Alibaba Group</name>
        <url>https://github.com/alibaba</url>
    </organization>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/alibaba/Sentinel/issues</url>
    </issueManagement>

    <properties>
        <revision>2.0.10.B</revision>
        <!-- Compile libs -->
        <fastjson2.version>2.0.61</fastjson2.version>
        <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>

        <!-- Test libs -->
        <junit.version>4.13.1</junit.version>
        <mockito.version>4.11.0</mockito.version>
        <spring-boot.version>4.1.0</spring-boot.version>
        <byte-buddy.version>1.18.7</byte-buddy.version>
        <assertj.version>3.27.7</assertj.version>
        <awaitility.version>4.3.0</awaitility.version>

        <!-- Build -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.source.version>17</java.source.version>
        <java.target.version>17</java.target.version>
        <java.encoding>UTF-8</java.encoding>
        <maven.compiler.version>3.10.1</maven.compiler.version>
        <maven.surefire.version>2.22.2</maven.surefire.version>
        <maven.source.version>3.2.1</maven.source.version>
        <maven.javadoc.version>3.4.0</maven.javadoc.version>
        <maven.deploy.version>3.0.0</maven.deploy.version>
        <maven.gpg.version>3.0.1</maven.gpg.version>
        <maven.jacoco.version>0.8.8</maven.jacoco.version>
        <maven.jar.version>3.2.2</maven.jar.version>
        <maven.pmd.version>3.17.0</maven.pmd.version>
    </properties>

    <modules>
        <module>sentinel-core</module>
        <module>sentinel-extension</module>
        <module>sentinel-transport</module>
        <module>sentinel-adapter</module>
        <module>sentinel-logging</module>

        <module>sentinel-dashboard</module>

    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-extension</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-annotation-aspectj</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-annotation-cdi-interceptor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-parameter-flow-control</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-datasource-extension</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-datasource-nacos</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-datasource-zookeeper</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-datasource-apollo</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-datasource-etcd</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-transport-simple-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-transport-netty-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-transport-spring-mvc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-transport-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-cluster-common-default</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-web-adapter-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
               <groupId>com.github.heyoulin.Sentinel</groupId>
                <artifactId>sentinel-metric-exporter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy-agent</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${awaitility.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>java-hamcrest</artifactId>
                <version>2.0.0.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://www.jitpack.io</url>
        </repository>
        <repository>
            <id>central-repos1</id>
            <name>Central Repository 2</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <!--阿里云主仓库，代理了maven central和jcenter仓库-->
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.7.3</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven.pmd.version}</version>
                <configuration>
                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                    <minimumPriority>1</minimumPriority>
                    <excludeRoots>
                        <excludeRoot>com/alibaba/csp/sentinel/benchmark</excludeRoot>
                    </excludeRoots>
                    <excludes>
                        <exclude>**/*_jmhTest.java</exclude>
                    </excludes>
                    <printFailingErrors>true</printFailingErrors>
                    <rulesets>
                        <ruleset>rulesets/java/ali-comment.xml</ruleset>
                        <ruleset>rulesets/java/ali-concurrent.xml</ruleset>
                        <ruleset>rulesets/java/ali-constant.xml</ruleset>
                        <ruleset>rulesets/java/ali-exception.xml</ruleset>
                        <ruleset>rulesets/java/ali-flowcontrol.xml</ruleset>
                        <ruleset>rulesets/java/ali-naming.xml</ruleset>
                        <ruleset>rulesets/java/ali-oop.xml</ruleset>
                        <ruleset>rulesets/java/ali-orm.xml</ruleset>
                        <ruleset>rulesets/java/ali-other.xml</ruleset>
                        <ruleset>rulesets/java/ali-set.xml</ruleset>
                    </rulesets>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.alibaba.p3c</groupId>
                        <artifactId>p3c-pmd</artifactId>
                        <version>2.1.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <release>17</release>
                        </configuration>
                    </execution>
                    <execution>
                        <id>base-compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>module-info.java</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${maven.jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${maven.gpg.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>central</id>
            <build>
                <plugins>
                    <!-- Source -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Javadoc -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <locale>en_US</locale>
                                    <encoding>UTF-8</encoding>
                                    <charset>UTF-8</charset>
                                    <doclint>none</doclint>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven.gpg.version}</version>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>central</id>
                    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>central</id>
                    <url>https://central.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

</project>
